--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,10 +9,10 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
-      - darwin
-    goarch:
-      - amd64
-      - arm64
+    #   - darwin
+    # goarch:
+    #   - amd64
+    #   - arm64
 
 changelog:
   sort: asc
