--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          repository: guyb1/public-plugin-repo
+          ref: 'main'
+          token:  ${{ secrets.PUBLIC_REPO }}
+      - name: setup git config
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git tag -a 1.0.1 -m 1.0.1
+          git push --tag
+
+      - uses: actions/checkout@v3
+        with:
           fetch-depth: 0
 
       - uses: actions/setup-go@v3
