--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,8 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO }}
-          GORELEASER_CURRENT_TAG: v2.0.1
+          GORELEASER_CURRENT_TAG: v2.0.2
+          GORELEASER_PREVIOUS_TAG: v2.0.1
 
       # - name: Update plugin Links
       #   run: |
