--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,25 +30,25 @@ jobs:
           git config user.email "<>"
       - run: LEVEL=${{ github.event.inputs.level }} bash scripts/update_plugin.sh
 
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+      # - uses: actions/checkout@v3
+      #   with:
+      #     fetch-depth: 0
 
-      - uses: actions/setup-go@v3
-        with:
-          stable: "false"
-          go-version: "1.18"
-      - run: go version
+      # - uses: actions/setup-go@v3
+      #   with:
+      #     stable: "false"
+      #     go-version: "1.18"
+      # - run: go version
 
-      - name: Release
-        uses: goreleaser/goreleaser-action@v3
-        with:
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO }}
-          GORELEASER_CURRENT_TAG: v2.0.2
-          GORELEASER_PREVIOUS_TAG: v2.0.1
+      # - name: Release
+      #   uses: goreleaser/goreleaser-action@v3
+      #   with:
+      #     version: latest
+      #     args: release --rm-dist
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO }}
+      #     GORELEASER_CURRENT_TAG: v2.0.2
+      #     GORELEASER_PREVIOUS_TAG: v2.0.1
 
       # - name: Update plugin Links
       #   run: |
